--- a/views/footer.html
+++ b/views/footer.html
@@ -41,7 +41,7 @@
             </div>
           </div>
           <div class="mobile-center">
-            &copy; Ozanam 2013 - Ozanam is a non-profit, social service agency located in Kansas City (Federal Tax ID # 44-0545442).
+            &copy; Ozanam 2013
           </div>
         </div>
       </div>
