--- a/views/history.html
+++ b/views/history.html
@@ -6,7 +6,7 @@
  <h2>Ozanam</h2>
   <p class="lead">Since 1948, Ozanam has helped thousands of at-risk youth dealing with emotional, behavioral and learning disabilities begin to get their lives back on track.</p>
 
-  <p>Ozanam is a non-profit, social service agency located in Kansas City. On our main campus, our Residential Treatment Program provides therapeutic services in a home-like setting for boys and girls, ages 12 to 18, who are dealing with emotional, behavioral and learning disabilities. Additional students receive special education at Ozanam School as part of our Day Treatment Program.</p>
+  <p>Ozanam is a non-profit, social service agency located in Kansas City (Federal Tax ID # 44-0545442). On our main campus, our Residential Treatment Program provides therapeutic services in a home-like setting for boys and girls, ages 12 to 18, who are dealing with emotional, behavioral and learning disabilities. Additional students receive special education at Ozanam School as part of our Day Treatment Program.</p>
 
   <p>Beyond our main campus, Ozanam also provides several community-based programs. Our Pathways Transitional Living Program provides shelter and support services throughout Kansas City and Wichita to young adults who are at-risk of becoming homeless. Our Mentoring Program connects positive adult leaders to children in foster care who have very few resources. Ozanam further impacts the community by offering educational consultation services to more than 300 schools throughout the Midwest.</p>
 
