adding sitemap + fixing titles.

--- a/views/header.html
+++ b/views/header.html
@@ -55,7 +55,7 @@
           <!-- Everything you want hidden at 940px or less, place within here -->
           <div class="nav-collapse collapse">
             <ul class="nav">
-            <li><a class="active" href="/">Event</a></li>
+            <li><a href="/">Event</a></li>
             <li><a href="/auction">Auction</a></li>
             <li><a href="/sponsor">Sponsorships</a></li>
             <li><a href="/register">Registration</a></li>
