adding toggle for title

--- a/views/header.html
+++ b/views/header.html
@@ -7,7 +7,7 @@
     <meta name="description" content="<%= meta.description %>">
     <meta name="author" content="<%= meta.author %>">
 
-    <title><%=title%> - 2013 Ozanam Hollywood Holiday Gala</title>
+    <title><%=title%><%if (titlesuffix) {%> - 2013 Ozanam Hollywood Holiday Gala<%}%></title>
 
     <link href='//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
     <!-- Le styles -->
