--- a/views/header.html
+++ b/views/header.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="<%= meta.description %>">
     <meta name="author" content="<%= meta.author %>">
+    <meta name="google-site-verification" content="VC1rajiWNjCWdG8gn2qCvaeEbI76W7y1qoVldrJwIb8" />
 
     <title><%=title%><%if (titlesuffix) {%> - 2013 Ozanam Hollywood Holiday Gala<%}%></title>
 
