--- a/views/donate.html
+++ b/views/donate.html
@@ -108,6 +108,12 @@
             </div>
             <div class="control-group">
               <div class="controls">
+                  <p class="well">
+              Please note: Auction items must be confirmed by November 1st in order to be included in our event program. Any contributions made after that deadline are still welcome by December 1st and will be recognized in an addendum.</p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="controls">
                   <button type="submit" class="btn btn-large">Register Item</button>
               </div>
             </div>
