--- a/views/sponsor.html
+++ b/views/sponsor.html
@@ -96,7 +96,7 @@
       <div class="span4">
         <h3><a href="/register#sponsor">EXTRA - $150</a></h3>
         <ul>
-          <li>Once entrance to the Gala.</li>
+          <li>One entrance to the Gala.</li>
         </ul>
       </div>
     </div>
