--- a/views/donate-disabled.html
+++ b/views/donate-disabled.html
@@ -8,6 +8,8 @@
 Please contact <a href="mailto:Kim.Gregory@ozanam.org">Kim Gregory</a> at 816-508-3606 if you have questions or need any assistance.</p>
 <p>Thank you!</p>
 
+<p><a href="http://assets.ozanamgala.org/Gala+Program+2013.pdf" target="_blank" class="btn btn-large btn-danger">Get the 2013 Auction Program!</a></p>
+
 <% include footer.html %>
 <% include scripts.html %>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script> 
