--- a/public/stylesheets/manage.css
+++ b/public/stylesheets/manage.css
@@ -1,3 +1,8 @@
 body {
   font: 15px/20px Georgia, "times new roman", times, serif;
+  padding-top: 50px;
+}
+
+.main-content {
+  /*padding: 40px 15px;*/
 }
