--- a/views/confirm.hbs
+++ b/views/confirm.hbs
@@ -122,16 +122,16 @@
         <div class="row">
            <label>How would you like to pay?</label>
             <p>
-              <label><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal" {{nopaypal ? ' disabled' : ' checked'}}/><img src="/img/paypal.gif" border="0" alt="PayPal"/>.</label><% if (nopaypal){}} <small>Your total exceeds $10,000 PayPal limit.</small><%}}}
-              <br/><label><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check" {{nopaypal ? ' checked' : ''}}/> Check by Mail</label>
+              <label><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal" {{#if nopaypal}} disabled{{else}} checked{{/if}} /><img src="/img/paypal.gif" border="0" alt="PayPal"/>.</label>{{#if nopaypal}}<small>Your total exceeds $10,000 PayPal limit.</small>{{/if}}
+              <br/><label><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check"  {{#if nopaypal}} checked{{/if}} /> Check by Mail</label>
             </p>
             <p><button type="submit" class="btn btn-large btn-default">Continue</button></p>
         </div>
-        <%if (problem) { }}
+        {{#if problem}}
         <div class="row">
           <div id="error" class="alert alert-error">There was a problem processing your payment. You can try again, or you can choose to send us a check by mail. Thank you for your patience.</div>
         </div>
-        <%}}}
+        {{/if}}
 
       </fieldset>
     </form>
