--- a/views/layouts/manage.hbs
+++ b/views/layouts/manage.hbs
@@ -9,18 +9,13 @@
     <title>{{title}}</title>
     <link media="screen" rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <link media="screen" rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css"/>
-    <link href="/dataTables/jquery.dataTables.min.css" rel="stylesheet">
-
-
+    <link media="screen" rel="stylesheet" href="/bower_components/datatables/media/css/jquery.dataTables.min.css"/>
     <!-- Custom styles for this template -->
-    <link href="/stylesheets/app.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/javascripts/ie10-viewport-bug-workaround.js"></script>
+    <link href="/stylesheets/manage.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.1/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
@@ -28,7 +23,7 @@
   <body>
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
+      <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -36,42 +31,28 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/app">Website Rates</a>
+          <a class="navbar-brand" href="/manage">{{title}}</a>
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a class="active" href="/">Back to Site</a></li>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
             <li><a href="/manage">Registrations</a></li>
-            <li><a href="/manage/donations">Auction Items</a></li>
-            <li><a>{{#if user.name}}{{user.name}}{{else}}{{user.email}}{{/if}}</a></li>
-            <li><a href="/logout"><i class="fa fa-power-off"></i> Logout</a></li>
+            <li><a href="/manage/donations">Donations</a></li>
+            <li><a href="/">Back to Site</a></li>
           </ul>
-        </div>
+          <ul class="nav navbar-nav pull-right">
+            <li><a href="/logout">Logout <i class="fa fa-power-off"></i></a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </div>
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li class="active"><a href="/app">Overview</a></li>
-            <li><a href="/app/programs">Programs</a></li>
-            <li><a href="/app/states">States</a></li>
-            <li><a href="/app/loan-types">Loan Types</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        {{{body}}}
-        </div>
-      </div>
-    </div>
+    <div class="container main-content">
 
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/bower_components/handlebars/handlebars.runtime.min.js"></script>
-    <script src="/javascripts/jquery.dataTables.min.js"></script>
-    <script src="/javascripts/datatables-bootstrap-paging.min.js"></script>
-    <script src="/javascripts/dataTablesExtensions.min.js"></script>
+    {{{body}}}
+
+    </div><!-- /.container -->
+
+    {{>scripts}}
 
     <script type="text/javascript">
         (function () {
