--- a/views/layouts/public.hbs
+++ b/views/layouts/public.hbs
@@ -1,6 +1,5 @@
-
 <!doctype html>
-<html lang="en" data-ng-app="myApp">
+<html lang="en">
 
   <head>
     <meta charset="utf-8">
@@ -13,22 +12,14 @@
 
     <link href='//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
     <!-- Le styles -->
-    <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="/stylesheets/datepicker.css" rel="stylesheet">
+    <link media="screen" rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link href="/bower_components/moment-datepicker/moment-datepicker/datepicker.css" rel="stylesheet">
     <link href="/stylesheets/public.css" rel="stylesheet">
-<!--     <link href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
- -->
+
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="/js/html5shiv.js"></script>
     <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="/ico/favicon.png">
   </head>
 
   <body>
@@ -36,8 +27,6 @@
 
     {{{body}}}
     {{>footer}}
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
     {{>scripts}}
 
     <script>
