--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,8 +1,8 @@
-<form class="form-signin" role="form" action="/login" method="POST">
+<form id="login-form" class="form-signin" role="form" action="/login" method="POST">
   <input type="hidden" name="redirectTo" value="{{redirectTo}}"/>
   <h2 class="form-signin-heading">Please sign in</h2>
-  <input type="email" name="username" class="form-control" placeholder="Email address" required autofocus>
-  <input type="password" name="password" class="form-control" placeholder="Password" required>
+  <input name="username" type="username" class="form-control" placeholder="Email address" autofocus>
+  <input name="password" type="password" class="form-control" placeholder="Password">
   <div class="alert alert-danger{{#unless message}} hide{{/unless}}">{{message}}</div>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 </form>
