--- a/views/layouts/manage.hbs
+++ b/views/layouts/manage.hbs
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>{{title}}</title>
-    <link media="screen" rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link media="screen" rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
     <link media="screen" rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css"/>
     <link media="screen" rel="stylesheet" href="/bower_components/datatables/media/css/jquery.dataTables.min.css"/>
     <!-- Custom styles for this template -->
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/manage">Registrations</a></li>
-            <li><a href="/manage/donations">Donations</a></li>
+            <li><a href="/manage/auctions">Auctions</a></li>
             <li><a href="/">Back to Site</a></li>
           </ul>
           <ul class="nav navbar-nav pull-right">
