--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -8,7 +8,7 @@
     <title>Signin</title>
 
     <!-- Bootstrap core CSS -->
-    <link media="screen" rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link media="screen" rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
     <link media="screen" rel="stylesheet" href="/stylesheets/login.css"/>
 
     <script type="text/javascript">
@@ -50,8 +50,10 @@
     </div> <!-- /container -->
 
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    {{>scripts}}
+    <script src="/bower_components/jquery.validation/dist/jquery.validate.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/js/global.js"></script>
+    <script src="/js/global-form.js"></script>
+    <script src="/js/login.js"></script>
   </body>
 </html>
