--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -2,11 +2,11 @@
       <div class="footer-wrapper">
         <div class="container">
           <div class="inner-container">
-            <div class="row-fluid">
-              <div class="span6">
+            <div class="row">
+              <div class="col-sm-6 col-xs-12">
                 <h3>Have Questions?</h3>
-                <div class="row-fluid">
-                  <div class="span6">
+                <div class="row">
+                  <div class="col-sm-6 col-xs-12">
                     <address>
                       <strong>Ozanam</strong><br>
                       421 E 137th Street<br>
@@ -16,7 +16,7 @@
                       <a href="http://www.ozanam.org">www.ozanam.org</a></p>
                     </address>
                   </div>
-                  <div class="span6">
+                  <div class="col-sm-6 col-xs-12">
                     <address>
                       <strong>Kim Gregory</strong><br>
                       Special Events Manager<br>
@@ -27,10 +27,10 @@
                   </div>
                 </div>
               </div>
-              <div class="span3 mobile-center">
+              <div class="col-sm-3 col-xs-12 mobile-center">
                 <img class="logo" src="/img/oz-logo.png" title="Ozanam"/>
               </div>
-              <div class="span3 text-right mobile-center">
+              <div class="col-sm-3 col-xs-12 text-right mobile-center">
                 <a href="http://www.facebook.com/pages/Ozanam/168776827476" class="social-icon facebook" title="Visit us on facebook!"></a>
                 <a href="https://twitter.com/Ozanamhome" class="social-icon twitter" title="Visit us on Twitter!"></a>
                 <a href="http://www.ozanamhome.wordpress.com/" class="social-icon feed" title="Stay up-to-date by reading our blog!"></a>
@@ -38,7 +38,7 @@
             </div>
           </div>
           <div class="mobile-center">
-            &copy; Ozanam 2013
+            &copy; Ozanam 2014
           </div>
         </div>
       </div>
