--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,29 +1,22 @@
-<div class="navbar">
-  <div class="navbar-inner">
-    <div class="container">
-
-      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+<div class="navbar navbar-default navbar-static-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </a>
-
-      <!-- Be sure to leave the brand out there if you want it shown -->
-
-
-      <!-- Everything you want hidden at 940px or less, place within here -->
-      <div class="nav-collapse collapse">
-        <ul class="nav">
-        <li><a href="/">Event</a></li>
+      </button>
+      <a class="navbar-brand" href="/">Ozanam Hollywood Holiday Gala</a>
+    </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
         <li><a href="/auction">Auction</a></li>
         <li><a href="/sponsor">Sponsorships</a></li>
         <li><a href="/register">Registration</a></li>
         <li><a href="/history">Ozanam</a></li>
-        </ul>
-      </div>
-
-    </div>
+      </ul>
+    </div><!--/.nav-collapse -->
   </div>
 </div>
 {{#if head_image_class}}<div class="{{head_image_class}}"></div>{{/if}}
