--- a/views/auction-disabled.hbs
+++ b/views/auction-disabled.hbs
@@ -5,6 +5,6 @@
     Please contact <a href="mailto:Kim.Gregory@ozanam.org">Kim Gregory</a> at 816-508-3606 if you have questions or need any assistance.</p>
     <p>Thank you!</p>
 
-    <p><a href="http://assets.ozanamgala.org/Gala+Program+2013.pdf" target="_blank" class="btn btn-large btn-danger">Get the 2013 Auction Program!</a></p>
+    <p><a href="http://assets.ozanamgala.org/Gala+Program+2013.pdf" target="_blank" class="btn btn-large btn-primary">Get the 2013 Auction Program!</a></p>
   </div>
 </div>
