--- a/bootswatch.less
+++ b/bootswatch.less
@@ -25,6 +25,18 @@
   }
 }
 
+.navbar-static-top {
+  z-index: @zindex-navbar;
+  border-width: @navbar-default-border-width 0;
+
+  @media (min-width: @grid-float-breakpoint) {
+    border-radius: 0;
+  }
+}
+.navbar-fixed-top {
+  top: 0;
+  border-width: @navbar-default-border-width 0;
+}
 // Buttons ====================================================================
 
 // Typography =================================================================
