--- a/variables.less
+++ b/variables.less
@@ -335,7 +335,7 @@
 //##
 
 // Basics of a navbar
-@navbar-height:                    50px;
+@navbar-height:                    64px;
 @navbar-margin-bottom:             0; //@line-height-computed;
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
@@ -344,7 +344,8 @@
 
 @navbar-default-color:             #fff;
 @navbar-default-bg:                @brand-primary;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-border:            lighten(@navbar-default-bg, 10%);
+@navbar-default-border-width:      5px;
 
 // Navbar links
 @navbar-default-link-color:                #fff;
