--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Ozanam Hollywood Holiday Gala</a>
+      <a class="navbar-brand" href="/">Event</a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
