--- a/views/auction.hbs
+++ b/views/auction.hbs
@@ -94,6 +94,7 @@
           </div>
           <div class="form-group form-group-lg">
             <button type="submit" class="btn btn-lg btn-primary">Register Item</button>
+            <span class="small text-muted">&nbsp;Alternatively, you may also <a href="//assets.ozanamgala.org/2014-auction-item-commitment-form.pdf">download this form in PDF (1MB)</a>.</span>
           </div>
         </fieldset>
     </form>
