Cleanup form-group-lg and tweaking brand nav item.

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,20 +5,20 @@
     <form id="registrationForm" method="POST" action="/register">
       <fieldset>
         <legend>Corporate Sponsor Agreement</legend>
-        <div class="form-group form-group-lg">
+        <div class="form-group">
           <label for="company">Listing Name</label>
           <input type="text" name="company" id="company" class="form-control" placeholder="Company or name to be listed in program" required/>
           <div class="help-block muted">Please print name as you would like to be listed in the event program.</div>
         </div>
-        <div class="form-group form-group-lg">
+        <div class="form-group">
           <label for="contact">Contact</label>
           <input type="text" class="form-control" placeholder="Contact Name" name="contact" id="contact" required/>
         </div>
-        <div class="form-group form-group-lg">
+        <div class="form-group">
           <label for="street">Street</label>
           <input type="text" name="street" id="street" class="form-control" placeholder="Street Address" required/>
         </div>
-        <div class="form-group form-group-lg row">
+        <div class="form-group row">
           <div class="col-xs-12 col-sm-4">
             <label for="city">City</label>
             <input type="text" name="city" id="city" class="form-control" placeholder="City" required/>
@@ -32,7 +32,7 @@
             <input type="text" name="zip" id="zip" placeholder="Zip" class="form-control" required/>
           </div>
         </div>
-        <div class="form-group form-group-lg row">
+        <div class="form-group row">
           <div class="col-xs-12 col-sm-6">
             <label for="phone">Phone</label>
             <input type="tel" name="phone" id="phone" placeholder="Phone" required class="form-control"/>
@@ -42,11 +42,11 @@
             <input type="tel" name="fax" id="fax" placeholder="Fax" class="form-control"/>
           </div>
         </div>
-        <div class="form-group form-group-lg">
+        <div class="form-group">
           <label for="email">Email</label>
           <input type="email" name="email" id="email" placeholder="Email" required class="form-control"/>
         </div>
-        <div class="form-group form-group-lg   sponsorships">
+        <div class="form-group   sponsorships">
           <a id="sponsor"></a><label>Sponsorship</label>
           <div class="row container">
             <div class="col-md-6 col-sm-12">
@@ -71,7 +71,7 @@
         </div>
         <div class="row">
           <div class="col-sm-6 col-xs-12">
-            <div class="form-group form-group-lg">
+            <div class="form-group">
               <label>Extra Seats</label>
               <div class="input-group">
                 <input type="number" min="0" step="1" name="extra" id="extra" placeholder="0" class="form-control"/>
@@ -83,7 +83,7 @@
         </div>
         <div class="row">
           <div class="col-sm-6 col-xs-12">
-            <div class="form-group form-group-lg">
+            <div class="form-group">
               <label>Donation</label>
               <div class="input-group">
                 <span class="input-group-addon">$</span>
@@ -94,21 +94,21 @@
             <div class="help-block muted">I am unable to attend the event but would like to make a donation.</div>
           </div>
         </div>
-        <div class="form-group form-group-lg">
+        <div class="form-group">
           <label for="seating">Seating</label>
           <textarea id="seating" name="seating" class="form-control" rows="3"></textarea>
           <div class="help-block muted">The following individuals will be seated at our table(s). Each table can seat up to 10 people.</div>
         </div>
-        <div class="form-group form-group-lg">
+        <div class="form-group">
           <label for="companyMatch"><input type="checkbox" id="companyMatch" name="companyMatch" value="true"/> Yes! My company will match my contribution.</label>
         </div>
-        <div class="form-group form-group-lg">
+        <div class="form-group">
           <label for="boardMember">Board / Committee Member</label>
           <input type="text" name="boardMember" id="boardMember" class="form-control"/>
           <div class="help-block muted">Did one of Ozanam's supporters refer you? Enter his/her name here.</div>
         </div>
 
-        <div class="form-group form-group-lg">
+        <div class="form-group">
           <p class="well">* Please note: Sponsorship commitments must be received and confirmed by November 1st in order to be included in our event program. Any contributions made after that deadline are still welcome by December 1st and will be recognized in an addendum.</p>
           <button type="submit" class="btn btn-lg btn-primary">Continue</button>
           <span class="small text-muted">&nbsp;Alternatively, you may also <a href="//assets.ozanamgala.org/2014-corporate-commitment-form.pdf">download this form in PDF (1MB)</a>.</span>
