--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,7 +7,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Event</a>
+      <a class="navbar-brand visible-xs hidden-sm" href="/"><small>Ozanam Hollywood Holiday Gala</small></a>
+      <a class="navbar-brand hidden-xs visible-sm visible-md visible-lg" href="/">Ozanam Hollywood Holiday Gala</a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
