--- a/views/auction.hbs
+++ b/views/auction.hbs
@@ -89,12 +89,11 @@
             </div>
           </div>
           <div class="form-group">
-            <p class="well">
-            Please note: Auction items must be confirmed by November 1st in order to be included in our event program. Any contributions made after that deadline are still welcome by December 1st and will be recognized in an addendum.</p>
+            <p class="well well-sm small">Please note: Auction items must be confirmed by November 1st in order to be included in our event program. Any contributions made after that deadline are still welcome by December 1st and will be recognized in an addendum.</p>
           </div>
           <div class="form-group">
             <button type="submit" class="btn btn-lg btn-primary">Register Item</button>
-            <span class="small text-muted">&nbsp;Alternatively, you may also <a href="//assets.ozanamgala.org/2014-auction-item-commitment-form.pdf">download this form in PDF (1MB)</a>.</span>
+            <br class="visible-xs"/><span class="small text-muted">&nbsp;Alternatively, you may also <a href="//assets.ozanamgala.org/2014-auction-item-commitment-form.pdf">download this form in PDF (1MB)</a>.</span>
           </div>
         </fieldset>
     </form>
