--- a/views/register.hbs
+++ b/views/register.hbs
@@ -109,9 +109,9 @@
         </div>
 
         <div class="form-group">
-          <p class="well">* Please note: Sponsorship commitments must be received and confirmed by November 1st in order to be included in our event program. Any contributions made after that deadline are still welcome by December 1st and will be recognized in an addendum.</p>
+          <p class="well well-sm small">*Please note: Sponsorship commitments must be received and confirmed by November 1st in order to be included in our event program. Any contributions made after that deadline are still welcome by December 1st and will be recognized in an addendum.</p>
           <button type="submit" class="btn btn-lg btn-primary">Continue</button>
-          <span class="small text-muted">&nbsp;Alternatively, you may also <a href="//assets.ozanamgala.org/2014-corporate-commitment-form.pdf">download this form in PDF (1MB)</a>.</span>
+          <br class="visible-xs"/><span class="small text-muted">&nbsp;Alternatively, you may also <a href="//assets.ozanamgala.org/2014-corporate-commitment-form.pdf">download this form in PDF (1MB)</a>.</span>
         </div>
         <div id="error" class="hide alert alert-error"></div>
       </fieldset>
