--- a/views/history.hbs
+++ b/views/history.hbs
@@ -10,5 +10,9 @@
     <p>Ozanam directly serves more than 200 youth daily and approximately 600 youth annually. Our goal is to help these boys and girls heal from past trauma, catch up in school, pursue vocational opportunities, learn life skills, form positive relationships, and begin to succeed in their homes, schools and communities. We could not do this without your support! Together we can help some of the most vulnerable youth become happy, healthy and productive members of society.</p>
 
     <p>For more information about Ozanam, please visit <a href="http://www.ozanam.org">www.ozanam.org</a>.</p>
+    <p>&nbsp;</p>
+    <div class="video-container">
+      <iframe width="550" height="309" src="//www.youtube.com/embed/9OUXLc6x3og?rel=0" frameborder="0" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
