--- a/views/sponsor.hbs
+++ b/views/sponsor.hbs
@@ -3,86 +3,86 @@
     <!-- content start  -->
     <h2>Sponsorship Levels</h2>
     <div id="sponsor">
-      <div class="row-fluid">
-        <div class="span4">
+      <div class="row">
+        <div class="col-sm-12 col-md-4">
           <h3><a href="/register#sponsor">HOLLYWOOD STAR - $25,000+</a></h3>
           <ul>
             <li>Three tables for 10 with preferential seating; customized table sign.</li>
             <li>Included in all publicity, including online promotion.</li>
             <li>Logo displayed in program. </li>
             <li>Prominent signage at the Gala. </li>
-            <li>YOP Tax credits available.</li>
+            <li>*YOP Tax credits available.</li>
           </ul>
         </div>
-        <div class="span4">
+        <div class="col-sm-12 col-md-4">
           <h3><a href="/register#sponsor">MAJOR STAR- $15,000</a></h3>
           <ul>
             <li>Two tables for 10 with preferential seating; customized table sign.</li>
             <li>Included in all publicity, including online promotion.</li>
             <li>Logo displayed in program. </li>
             <li>Prominent signage at the Gala. </li>
-            <li>YOP Tax credits available.</li>
+            <li>*YOP Tax credits available.</li>
           </ul>
        </div>
-        <div class="span4">
+        <div class="col-sm-12 col-md-4">
           <h3><a href="/register#sponsor">STAR - $10,000</a></h3>
           <ul>
             <li>Table for 10 with preferential seating; customized table sign.</li>
             <li>Included in all publicity, including online promotion.</li>
             <li>Logo displayed in program. </li>
             <li>Prominent signage at the Gala. </li>
-            <li>YOP Tax credits available.</li>
+            <li>*YOP Tax credits available.</li>
           </ul>
         </div>
       </div>
 
-      <div class="row-fluid" style="clear: left;">
-        <div class="span4">
+      <div class="row clearfix">
+        <div class="col-sm-12 col-md-4">
           <h3><a href="/register#sponsor">CO-STAR - $5,000</a></h3>
           <ul>
             <li>Table for 10 with preferential seating; customized table sign.</li>
             <li>Name displayed in program.</li>
             <li>Prominent signage at the Gala. </li>
-            <li>YOP Tax credits available.</li>
+            <li>*YOP Tax credits available.</li>
           </ul>
         </div>
-        <div class="span4">
+        <div class="col-sm-12 col-md-4">
           <h3><a href="/register#sponsor">PRODUCER - $3,000</a></h3>
           <ul>
             <li>Table for 10 with customized table sign.</li>
             <li>Name listed in program.</li>
             <li>Signage at the Gala. </li>
-            <li>YOP Tax credits available.</li>
+            <li>*YOP Tax credits available.</li>
           </ul>
        </div>
-        <div class="span4">
+        <div class="col-sm-12 col-md-4">
           <h3><a href="/register#sponsor">TABLE SPONSOR - $2,000</a></h3>
           <ul>
             <li>Table for 10.</li>
             <li>Name listed in program.</li>
             <li>Signage at the Gala. </li>
-            <li>YOP Tax credits available.</li>
+            <li>*YOP Tax credits available.</li>
           </ul>
         </div>
       </div>
-      <div class="row-fluid" style="clear:left;">
-        <div class="span4">
+      <div class="row clearfix">
+        <div class="col-sm-12 col-md-4">
           <h3><a href="/register#sponsor">UNDERWRITER - $1,500</a></h3>
           <ul>
             <li>Two entrances to the Gala.</li>
             <li>Name listed in program.</li>
             <li>Signage at the Gala. </li>
-            <li>YOP Tax credits available.</li>
+            <li>*YOP Tax credits available.</li>
           </ul>
         </div>
-        <div class="span4">
+        <div class="col-sm-12 col-md-4">
           <h3><a href="/register#sponsor">SUPPORTING CAST - $750</a></h3>
           <ul>
             <li>Four entrances to the Gala.</li>
             <li>Name listed in program.</li>
           </ul>
        </div>
-        <div class="span4">
+        <div class="col-sm-12 col-md-4">
           <h3><a href="/register#sponsor">CORPORATE SPONSOR - $450</a></h3>
           <ul>
             <li>Two entrances to the Gala.</li>
@@ -90,13 +90,16 @@
           </ul>
         </div>
       </div>
-      <div class="row-fluid" style="clear:left;">
-        <div class="span4">
+      <div class="row clearfix">
+        <div class="col-sm-12 col-md-4">
           <h3><a href="/register#sponsor">EXTRA - $150</a></h3>
           <ul>
             <li>One entrance to the Gala.</li>
           </ul>
         </div>
+      </div>
+      <div class="row clearfix">
+        <p><em><small>*Donations eligible for YOP must be received by June 30, 2014. If past this due date, feel free to indicate your interest anyway so that we can notify you as credits become available in the future.</small></em></p>
       </div>
     </div>
   </div>
