--- a/views/auction.hbs
+++ b/views/auction.hbs
@@ -93,7 +93,7 @@
           </div>
           <div class="form-group">
             <button type="submit" class="btn btn-lg btn-primary">Register Item</button>
-            <br class="visible-xs"/><span class="small text-muted">&nbsp;Alternatively, you may also <a href="//assets.ozanamgala.org/2014-auction-item-commitment-form.pdf">download this form in PDF (1MB)</a>.</span>
+            <br class="visible-xs"/><span class="small text-muted">&nbsp;Alternatively, you may also <a href="//s3.amazonaws.com/assets.ozanamgala.org/2014-auction-item-commitment-form.pdf">download this form in PDF (1MB)</a>.</span>
           </div>
         </fieldset>
     </form>
