--- a/views/history.hbs
+++ b/views/history.hbs
@@ -11,8 +11,6 @@
 
     <p>For more information about Ozanam, please visit <a href="http://www.ozanam.org">www.ozanam.org</a>.</p>
     <p>&nbsp;</p>
-    <div class="video-container">
-      <iframe width="550" height="309" src="//www.youtube.com/embed/9OUXLc6x3og?rel=0" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <iframe width="560" height="315" src="//www.youtube.com/embed/9OUXLc6x3og" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
