--- a/views/register.hbs
+++ b/views/register.hbs
@@ -103,15 +103,21 @@
           <label for="companyMatch"><input type="checkbox" id="companyMatch" name="companyMatch" value="true"/> Yes! My company will match my contribution.</label>
         </div>
         <div class="form-group">
+          <label for="myoTaxCreditInfo"><input type="checkbox" id="myoTaxCreditInfo" name="myoTaxCreditInfo" value="true"/> *I'm interested in Missouri Youth Opportunity Tax Credits forms.</label>
+        </div>
+        <p class="well well-sm small">*Donations eligible for YOP are available on a first-come, first-serve basis for a limited time. Please indicate your interest so we can provide you with the form to claim your tax credits.
+          <br/>&nbsp;
+          <br/>Read more about <a href="//s3.amazonaws.com/assets.ozanamgala.org/yop-2014.pdf">Missouri Youth Opportunity Tax Credits</a> (PDF 229KB).
+        </p>
+        <div class="form-group">
           <label for="boardMember">Board / Committee Member</label>
           <input type="text" name="boardMember" id="boardMember" class="form-control"/>
           <div class="help-block muted">Did one of Ozanam's supporters refer you? Enter his/her name here.</div>
         </div>
 
         <div class="form-group">
-          <p class="well well-sm small">*Please note: Sponsorship commitments must be received and confirmed by November 1st in order to be included in our event program. Any contributions made after that deadline are still welcome by December 1st and will be recognized in an addendum.</p>
           <button type="submit" class="btn btn-lg btn-primary">Continue</button>
-          <br class="visible-xs"/><span class="small text-muted">&nbsp;Alternatively, you may also <a href="//assets.ozanamgala.org/2014-corporate-commitment-form.pdf">download this form in PDF (1MB)</a>.</span>
+          <br class="visible-xs"/><span class="small text-muted">&nbsp;Alternatively, you may also <a href="//s3.amazonaws.com/assets.ozanamgala.org/2014-corporate-commitment-form.pdf">download this form in PDF (1MB)</a>.</span>
         </div>
         <div id="error" class="hide alert alert-error"></div>
       </fieldset>
