--- a/views/register.hbs
+++ b/views/register.hbs
@@ -105,7 +105,7 @@
         <div class="form-group">
           <label for="myoTaxCreditInfo"><input type="checkbox" id="myoTaxCreditInfo" name="myoTaxCreditInfo" value="true"/> *I'm interested in Missouri Youth Opportunity Tax Credits forms.</label>
         </div>
-        <p class="well well-sm small">*Donations eligible for YOP are available on a first-come, first-serve basis for a limited time. Please indicate your interest so we can provide you with the form to claim your tax credits.
+        <p class="well well-sm small">*Donations eligible for Youth Opportunity (YOP) Tax Credits must be received by June 30, 2015. Please indicate your interest to us so we can provide you with a one-page form to complete in order to claim the credits. They are available on a first-come, first-served basis. <a href="http://ded.mo.gov/BCS%20Programs/BCSProgramDetails.aspx?BCSProgramID=85">Download our informational insert</a> or visit the Missouri government’s website for more details.
           <br/>&nbsp;
           <br/>Read more about <a href="//s3.amazonaws.com/assets.ozanamgala.org/yop-2014.pdf">Missouri Youth Opportunity Tax Credits</a> (PDF 229KB).
         </p>
