--- a/views/sponsor.hbs
+++ b/views/sponsor.hbs
@@ -99,7 +99,7 @@
         </div>
       </div>
       <div class="row clearfix">
-        <p><em><small>*Donations eligible for YOP must be received by June 30, 2014. If past this due date, feel free to indicate your interest anyway so that we can notify you as credits become available in the future.</small></em></p>
+        <p><em><small>*Donations eligible for Youth Opportunity (YOP) Tax Credits must be received by June 30, 2015. Please indicate your interest to us so we can provide you with a one-page form to complete in order to claim the credits. They are available on a first-come, first-served basis. <a href="http://ded.mo.gov/BCS%20Programs/BCSProgramDetails.aspx?BCSProgramID=85">Download our informational insert</a> or visit the Missouri government’s website for more details.</small></em></p>
       </div>
     </div>
   </div>
