--- a/views/register-disabled.hbs
+++ b/views/register-disabled.hbs
@@ -2,8 +2,7 @@
   <div class="container content">
     <h2 class="blue">Registration</h2>
     <p>
-    Online registration is now closed. We are excited to have more than 800 guests attending our 2013 event!
-    If you have already registered, then simply check in upon your arrival. You will receive a program and bid number at that time.
+    Online registration is now closed. If you have already registered, then simply check in upon your arrival. You will receive a program and bid number at that time.
     Please contact <a href="mailto:Kim.Gregory@ozanam.org">Kim Gregory</a> at 816-508-3606 if you have questions or need any assistance.</p>
     <p class="lead">Thank you!</p>
   </div>
