--- a/public/stylesheets/public.css
+++ b/public/stylesheets/public.css
@@ -4,6 +4,21 @@
   font: 20px/28px Georgia, "times new roman", times, serif;
 }
 */
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  background-color: #f5f5f5;
+}
+
 .content {
   padding-bottom: 80px;
 }
@@ -85,9 +100,6 @@ body p.lead {
 .footer .container {
   padding: 30px;
   width: auto;
-}
-.footer .inner-container {
-  min-height: 220px;
 }
 
 .footer h3 {
