--- a/views/layouts/public.hbs
+++ b/views/layouts/public.hbs
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{meta.description}}">
     <meta name="author" content="{{meta.author}}">
     <meta name="google-site-verification" content="VC1rajiWNjCWdG8gn2qCvaeEbI76W7y1qoVldrJwIb8" />
@@ -16,9 +16,10 @@
     <link href="/bower_components/bootstrap-datepicker/css/datepicker3.css" rel="stylesheet">
     <link href="/stylesheets/public.css" rel="stylesheet">
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="/js/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
 
