Content updates for 2015

--- a/views/history.hbs
+++ b/views/history.hbs
@@ -7,10 +7,12 @@
 
     <p>Beyond our main campus, Ozanam also provides several community-based programs. Our Pathways Transitional Living Program provides shelter and support services throughout Kansas City and Wichita to young adults who are at-risk of becoming homeless. Our Mentoring Program connects positive adult leaders to children in foster care who have very few resources. Ozanam further impacts the community by offering educational consultation services to more than 300 schools throughout the Midwest.</p>
 
-    <p>Ozanam directly serves more than 200 youth daily and approximately 600 youth annually. Our goal is to help these boys and girls heal from past trauma, catch up in school, pursue vocational opportunities, learn life skills, form positive relationships, and begin to succeed in their homes, schools and communities. We could not do this without your support! Together we can help some of the most vulnerable youth become happy, healthy and productive members of society.</p>
+    <p>Ozanam directly serves more than 200 youth daily and approximately 500 youth annually. Our goal is to help these boys and girls heal from past trauma, catch up in school, pursue vocational opportunities, learn life skills, form positive relationships, and begin to succeed in their homes, schools and communities. We could not do this without your support! Together we can help some of the most vulnerable youth become happy, healthy and productive members of society.</p>
 
     <p>For more information about Ozanam, please visit <a href="http://www.ozanam.org">www.ozanam.org</a>.</p>
     <p>&nbsp;</p>
-    <iframe width="560" height="315" src="//www.youtube.com/embed/9OUXLc6x3og" frameborder="0" allowfullscreen></iframe>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe src="https://www.youtube.com/embed/9OUXLc6x3og" frameborder="0" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
