--- a/views/manage/index.hbs
+++ b/views/manage/index.hbs
@@ -1,7 +1,8 @@
 <h1>Registrations</h1>
 <p><button id="export" type="button" class="btn btn-large btn-info">Export to Excel</button></p>
 <p><label for="year">Registration Year</label> <select id="year" style="width: auto;">
-  <option value="2014" selected>2014</option>
+  <option value="2015" selected>2015</option>
+  <option value="2014">2014</option>
   <option value="2013">2013</option>
 </select>
 <label for="showDownloaded"><input type="checkbox" id="showDownloaded" value="false"/> Show Downloaded</label>
