--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -18,11 +18,11 @@
                   </div>
                   <div class="col-sm-6 col-xs-12">
                     <address>
-                      <strong>Kim Gregory</strong><br>
+                      <strong>Shelli Veatch</strong><br>
                       Special Events Manager<br>
                       <abbr title="Phone">P:</abbr> (816) 508-3606<br>
                       <abbr title="Fax">F:</abbr> (816) 508-3797<br>
-                      <a href="mailto:kim.gregory@ozanam.org">kim.gregory@ozanam.org</a></p>
+                      <a href="mailto:shelli.veatch@ozanam.org">shelli.veatch@ozanam.org</a></p>
                     </address>
                   </div>
                 </div>
@@ -38,7 +38,7 @@
             </div>
           </div>
           <div class="mobile-center">
-            &copy; Ozanam 2014
+            &copy; Ozanam 2015
           </div>
         </div>
       </div>
