Minor tweak from an idea.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,12 +2,12 @@
   <div class="container content">
     <!-- content start  -->
     <h2>Ozanam Hollywood Holiday Gala</h2>
-    <img src="img/gala-logo.gif" align="right"/>
+    <img src="img/gala-logo.gif" class="img-responsive pull-right hidden-xs show-sm show-md show-lg"/>
+    <div class="text-center show-xs hidden-sm hidden-md hidden-lg"><img src="img/gala-logo.gif"/></div>
     <p>This will be the 32nd year of Ozanam's Hollywood Holiday Gala, which began as a movie benefit in 1983. Throughout the past three decades, it has evolved into Ozanam's largest fundraiser of the year. Recently it was even recognized as one of the "Top 10" Events in Kansas City! Last year, more than 800 people attended the event and helped us to raise more than $560,000!
     <p>Whether you have made this event a holiday tradition or are attending for the first time, we hope you will join us! This year’s 32nd Annual Hollywood Holiday Gala will be held on Thursday, December 3rd, 2015. The event will be located once again at the Sheraton Kansas City Hotel at Crown Center as we experience the glitz and glamour of Hollywood to benefit Ozanam!</p>
     <p>This fun-filled evening begins at 5:30 p.m. with a large silent auction featuring more than 300 items. Then guests enjoy an elegant dinner and enthusiastic program with performances by the Ozanam children. Finally, the night is topped off with an exciting oral auction led by the Nigro Brothers Auctioneers, Larry Moore and Bryan Truta. Festivities conclude by 10 p.m. Business attire, holiday clothing, or formal wear is encouraged. Be a star by showing your support!</p>
     <p>View <a href="http://assets.ozanamgala.org/2014-program.pdf" target="_blank">last year’s auction program.</a> Be sure to check back closer to the event to download this year’s new auction program as soon as it’s available. You can read about all the amazing auction items available for bidding during the event so that you can plan your shopping in advance!</p>
     <p>All of the proceeds from the Gala support the life-changing programs and services for at-risk youth at Ozanam. Since 1948, Ozanam has provided residential treatment, day treatment, mentoring, transitional living, and school consultation services to hundreds of boys and girls each year. For more information about Ozanam, please visit <a href="http://www.ozanam.org">www.ozanam.org</a>.</p>
-
   </div>
 </div>
